@@ -1,5 +1,10 @@
 $Id$
 
+2016-03-26  Christian Franke  <franke@computer.org>
+
+	nvmeprint.cpp: Remove ary_to_str().
+	utility.cpp, utility.h: Add format_char_array().
+
 2016-03-24  Christian Franke  <franke@computer.org>
 
 	dev_interface.cpp: Add missing 'usbprolific' to help text.
